# mimo

./: .env.example  .gitignore  .mimorc  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mimo_coder/: __init__.py  __main__.py  agent.py  cli.py  client.py  config.py  sessions.py  tools.py
tests/: test_agent.py  test_config.py  test_tools.py
